tests/positive/MiniC/MultiModules/Prelude.mjuvix
module Prelude;

open import String public;

open import Bool public;

open import Pair public;

open import IO public;

end;
