tests/negative/230/Foo.mjuvix
module Foo;

open import Foo.Data.Bool;

end;
